--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C36C9C4A4D592CB3DA7D4A8AB08AC34F
+CopyrightNotice=Copyright JustGeezy Games 2017
 
 [StartupActions]
 bAddPacks=True
