--- a/BuildingEscape 4.15/Config/DefaultEngine.ini
+++ b/BuildingEscape 4.15/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewMap.NewMap
-GameDefaultMap=/Game/NewMap.NewMap
-GlobalDefaultGameMode=/Game/BuildingEscapeGameMode_BP.BuildingEscapeGameMode_BP_C
+EditorStartupMap=/Game/Levels/Level1.Level1
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameMode_BP.BuildingEscapeGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -47,5 +47,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
